# fastapi-project

./: pyproject.toml
fastapi_first_project/: .env.template  main.py
fastapi_first_project/alembic/versions/: 2024_08_08_2020-40ed0b75db96_create_user_table.py
fastapi_first_project/api/: __init__.py
fastapi_first_project/api/api_v1/: __init__.py  users.py
fastapi_first_project/core/: config.py
fastapi_first_project/core/models/: base.py  db_helper.py
fastapi_first_project/core/schemas/: user.py
fastapi_first_project/crud/: users.py
